<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <name>${project.groupId}:${project.artifactId}</name>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>1.10.19</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <packaging>pom</packaging>

  <groupId>com.capitalone.dashboard</groupId>
  <artifactId>Hygieia</artifactId>
  <version>2.0.4-SNAPSHOT</version>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>1.2.5.RELEASE</version>
  </parent>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Amit Mawkin</name>
      <email>amit.mawkin@capitalone.com</email>
      <organization>CapitalOne</organization>
      <organizationUrl>http://www.capitalone.com</organizationUrl>
    </developer>
    <developer>
      <name>Tapabrata Topo Pal</name>
      <email>tapabrata.pal@capitalone.com</email>
      <organization>CapitalOne</organization>
      <organizationUrl>http://www.capitalone.com</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/capitalone/Hygieia.git/</connection>
    <developerConnection>scm:git:https://github.com/capitalone/Hygieia.git/</developerConnection>
    <url>https://github.com/capitalone/Hygieia.git</url>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <properties>
    <spring-data-releasetrain.version>Gosling-RELEASE</spring-data-releasetrain.version>
    <mongodb.version>3.0.2</mongodb.version>
    <mongo>3.0.2</mongo>
    <spring.version>4.1.7.RELEASE</spring.version>
    <jackson.version>2.5.0</jackson.version>
    <guava.version>16.0.1</guava.version>
    <pmd.version>3.6</pmd.version>
    <jacoco.version>0.7.6.201602180812</jacoco.version>
    <joda-time.version>2.7</joda-time.version>
    <joda-convert.version>1.8.1</joda-convert.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>com.spotify</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <configuration>
          <skipDockerBuild>true</skipDockerBuild>
        </configuration>
        <executions>
          <execution>
            <!-- Note: Today we make the containers optional, we want these
              standard we should uncomment this: -->
            <!--<phase>package</phase>-->
            <goals>
              <goal>build</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>${pmd.version}</version>
        <configuration>
          <excludeRoots>
            <excludeRoot>${project.basedir}/target/generated-sources/java</excludeRoot>
          </excludeRoots>
          <rulesets>
            <ruleset>${project.parent.basedir}/pmd.xml</ruleset>
          </rulesets>
        </configuration>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
              <!-- disabled for now: -->
              <!--<goal>cpd-check</goal>-->
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.spotify</groupId>
          <artifactId>docker-maven-plugin</artifactId>
          <version>0.4.10</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <!--<groupId>org.sonarsource.scanner.maven</groupId>-->
          <artifactId>sonar-maven-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <phase>verify</phase>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>defaultBuild</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>core</module>
        <module>api</module>
        <module>collectors/build/bamboo</module>
        <module>collectors/build/jenkins</module>
        <module>collectors/build/jenkins-cucumber</module>
        <module>collectors/build/jenkins-codequality-collector</module>
        <module>collectors/build/sonar</module>
        <module>collectors/cloud/aws</module>
        <module>collectors/deploy/udeploy</module>
        <module>collectors/deploy/xldeploy</module>
        <module>collectors/feature/jira</module>
        <module>collectors/feature/versionone</module>
        <module>collectors/misc/chat-ops</module>
        <module>collectors/scm/bitbucket</module>
        <module>collectors/scm/github</module>
        <module>collectors/scm/subversion</module>
        <module>collectors/scm/gitlab</module>
        <module>UI</module>
      </modules>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.5.1</version>
              <configuration>
                <source>1.8</source>
                <target>1.8</target>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
    <profile>
      <id>release</id>
      <modules>
        <module>core</module>
        <module>api</module>
        <module>collectors/build/bamboo</module>
        <module>collectors/build/jenkins</module>
        <module>collectors/build/jenkins-cucumber</module>
        <module>collectors/build/jenkins-codequality-collector</module>
        <module>collectors/build/sonar</module>
        <module>collectors/cloud/aws</module>
        <module>collectors/deploy/udeploy</module>
        <module>collectors/deploy/xldeploy</module>
        <module>collectors/feature/jira</module>
        <module>collectors/feature/versionone</module>
        <module>collectors/misc/chat-ops</module>
        <module>collectors/scm/bitbucket</module>
        <module>collectors/scm/github</module>
        <module>collectors/scm/subversion</module>
        <module>collectors/scm/gitlab</module>
      </modules>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.5.1</version>
            <configuration>
              <source>1.8</source>
              <target>1.8</target>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.9.1</version>
            <configuration>
              <additionalparam>-Xdoclint:none</additionalparam>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
